[package]
name = "decay"
version = "0.1.0"
authors = ["Piotr Podusowski <podusowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "*"
piston_window = "*"
gfx_device_gl = "*"
approx = "*"
chrono = "*"
rg3d = "*"