[package]
name = "decay"
version = "0.1.0"
authors = ["Piotr Podusowski <podusowski@gmail.com>"]
edition = "2021"
#resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "*"
chrono = "*"
bevy = "0.8"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.9"
uom = "0.33.0"
