[package]
name = "decay"
version = "0.1.0"
authors = ["Piotr Podusowski <podusowski@gmail.com>"]
edition = "2021"
#resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "*"
chrono = "*"
bevy = "0.8"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.9"
uom = { version = "0.33.0", features = ["use_serde"] }
rhorizons = "0.3.0"
tokio = "1.21.0"
tokio-stream = "0.1.9"
